<resources>
    <string name="app_name">apex_sdk</string>
    <string name="unsupported">Ble Bluetooth is not supported</string>
    <string name="location_permission">Please enable location permission</string>
    <string name="no_equipment">No Bluetooth devices were found</string>
    <string name="device_address">Device address does not exist</string>
    <string name="no_response">Device response timeout</string>
    <string name="parse_error">Data parsing error</string>
    <string name="fail_in_send">Data sending failed</string>
    <string name="disconnect">Device disconnected</string>
    <string name="closed">Bluetooth is not turned on</string>
    <string name="stack_error">Data stack error</string>
    <string name="already_started">BLE scan with the same settings is already started by the app</string>
    <string name="cannot_register">App cannot be registered</string>
    <string name="internal_error">Internal error</string>
    <string name="power_optimization_error">Power optimization scanning is not supported</string>
    <string name="insufficient_resources">Insufficient hardware resources</string>
    <string name="frequent_scanning">Application tries to scan too frequently</string>
    <string name="unknown">unknown</string>
    <string name="device_connected">Device connected</string>
    <string name="not_found">Device not found</string>
    <string name="connection_timed_out">Device connection timeout</string>
    <string name="example">Api list example</string>
    <string name="not_connected">Device not connected</string>
    <string name="connecting">Device is connecting</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_error">Error found while connecting</string>
    <string name="watch_id">Watch id</string>
    <string name="watch_type">Watch type</string>
    <string name="firmware_version">Firmware version</string>
    <string name="binding_status">Binding_status</string>
    <string name="user_id">User id</string>
    <string name="agps_update_time">Agps update time</string>
    <string name="bound">Bound</string>
    <string name="unbound">Unbound</string>
    <string name="failed_to_get_data">Failed to get data</string>
    <string name="waite">Please wait.....</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="wearing_habits">Wearing habits</string>
    <string name="skin_colour">Skin colour</string>
    <string name="modify_information">Modify information</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="modification_failed">Modification failed</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="skin_white">white</string>
    <string name="skin_white_yellow">white yellow</string>
    <string name="skin_yellow">yellow</string>
    <string name="skin_yellow_black">yellow_black</string>
    <string name="skin_black">black</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="hour_system">Hour system</string>
    <string name="time_zone">Time zone</string>
    <string name="current_hour">Current hour</string>
    <string name="current_minute">Current minute</string>
    <string name="sync_mode">Sync mode</string>
    <string name="eastern_time_zone">Eastern time zone</string>
    <string name="west_time_zone">West time zone</string>
    <string name="zero_time_zone">Zero time zone</string>
    <string name="general_sync">General sync</string>
    <string name="sync_to_movement">Sync to movement</string>
    <string name="twelve_hour_system">12 hour system</string>
    <string name="twenty_four_hour_system">24 hour system</string>
    <string name="binding_succeeded">Binding succeeded</string>
    <string name="state_of_charge">State of charge</string>
    <string name="electric_quantity">Electric quantity</string>
    <string name="language">Language</string>
    <string name="language_default">Default</string>
    <string name="language_english">English</string>
    <string name="language_chinese_simplifid">Chinese simplifid</string>
    <string name="language_chinese_traditional">Chinese_traditional</string>
    <string name="language_korean">Korean</string>
    <string name="language_thai">Thai</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_francais">Francais</string>
    <string name="language_deutsch">Deutsch</string>
    <string name="language_italiano">Italiano</string>
    <string name="language_polski">Polski</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_russian">Russian</string>
    <string name="language_dutch">Dutch</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_greek">Greek</string>
    <string name="language_hebrew">Hebrew</string>
    <string name="language_swedish">Swedish</string>
    <string name="language_hindi">Hindi</string>
    <string name="device_unit_metric">Metric(m,km,cm)</string>
    <string name="device_unit_imperial">Imperial(feet,miles,inch)</string>
    <string name="device_action_restore">Restore factory settings</string>
    <string name="device_action_restart">Restart</string>
    <string name="device_action_bright_screen">Light up the screen</string>
    <string name="device_action_rest_screen">Rest screen</string>
    <string name="device_action_restore_hint">Restore the factory settings and exit the app</string>
    <string name="disturb_switch">Switch</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="switch_state_close">Off</string>
    <string name="switch_state_on">On</string>
    <string name="bt_on_and_connect">Bt on and connect</string>
    <string name="on_or_off">On or off</string>
    <string name="hometown_name">Hometown name</string>
    <string name="add_failed">Add failed</string>
    <string name="steps">Number of steps</string>
    <string name="calorie">Calorie</string>
    <string name="distance">Distance</string>
    <string name="exercise_duration">Exercise duration</string>
    <string name="sleep_duration">Sleep duration</string>
    <string name="cycle">Cycle</string>
    <string name="every_day">Every day</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="only_once">Only once</string>
    <string name="interval_time">Interval time</string>
    <string name="alarm_switch">Alarm switch</string>
    <string name="max_heart_rate">Maximum heart rate</string>
    <string name="min_heart_rate">Minimum heart rate</string>
    <string name="push_info">Push info</string>
    <string name="face_book_title">Face book title</string>
    <string name="face_book_content">Face book title</string>
    <string name="push_time">Push time</string>
    <string name="call_title">Call title</string>
    <string name="call_content">Call content</string>
    <string name="hang_up_title">Hang up call</string>
    <string name="hang_up_content">Hang up content</string>
    <string name="sms_title">SMS title</string>
    <string name="sms_content">sms_content</string>
    <string name="push_app_info">Push app</string>
    <string name="push_call">Push call</string>
    <string name="hang_call">Hang up</string>
    <string name="push_sms"> Push sms</string>
    <string name="push_failed">Push failed</string>
    <string name="push_successful">Push successful</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="current_temperature">Current temperature</string>
    <string name="place">Place</string>
    <string name="daytime_weather">Daytime weather</string>
    <string name="night_weather">Night weather</string>
    <string name="air_quality">Air quality</string>
    <string name="uv_intensity">UV intensity</string>
    <string name="moon">Phase of the moon</string>
    <string name="min_temperature">Minimum temperature</string>
    <string name="max_temperature">Maximum temperature</string>
    <string name="sunrise_time">Sunrise time</string>
    <string name="sunset_time">Sunset time</string>
    <string name="min_wind_force">Minimum wind force</string>
    <string name="max_wind_force">Maximum wind force</string>
    <string name="air_humidity">Air humidity</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="add_weather">Add weather</string>
    <string name="weather_type_clear">Clear</string>
    <string name="weather_type_cloudy">Cloudy</string>
    <string name="weather_type_gloomy">Gloomy</string>
    <string name="weather_type_drizzle">Drizzle</string>
    <string name="weather_type_moderate_rain">Moderate rain</string>
    <string name="weather_type_thunderstorm">Thunderstorm</string>
    <string name="weather_type_heavy_rain">Heavy rain</string>
    <string name="weather_type_heavy_sleet">Sleet</string>
    <string name="weather_type_light_snow">Light snow</string>
    <string name="weather_type_moderate_snow">Moderate snow</string>
    <string name="weather_type_heavy_snow">Heavy snow</string>
    <string name="weather_air_excellent">Excellent</string>
    <string name="weather_air_good">Good</string>
    <string name="weather_air_bad">Bad</string>
    <string name="weather_rays_weak">Weak</string>
    <string name="weather_rays_medium">Medium</string>
    <string name="weather_rays_strong">Strong</string>
    <string name="weather_rays_very_strong">Very strong</string>
    <string name="weather_rays_super_strong">Super strong</string>
    <string name="weather_moon_new_moon">new_moon</string>
    <string name="weather_moon_waxing_crescent_moon">Waxing crescent moon</string>
    <string name="weather_moon_quarter_moon">Quarter moon</string>
    <string name="weather_moon_half_moon_1">Half moon 1</string>
    <string name="weather_moon_waxing_gibbous_moon">Waxing gibbous moon</string>
    <string name="weather_moon_full_moon">Full moon</string>
    <string name="weather_moon_waning_gibbous_moon">Waning gibbous moon</string>
    <string name="weather_moon_half_moon_2">Half moon 2</string>
    <string name="weather_moon_last_quarter_moon">Last quarter moon</string>
    <string name="weather_moon_waning_crescent_moon">Waning crescent moon</string>
    <string name="temperature_unit_centigrade">Centigrade</string>
    <string name="temperature_unit_fahrenheit">Fahrenheit</string>
    <string name="FirstLeverTips">Press and hold the right side of the list and drag up and down to adjust the display order</string>
    <string name="display">display</string>
    <string name="HomePage">Home</string>
    <string name="WorkoutState">Workout status</string>
    <string name="main_menu">Main menu</string>
    <string name="Background">Background</string>
    <string name="diff_color_dial">Dial with different color text</string>
    <string name="generate_pictures">Generate pictures</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="gray">gray</string>
    <string name="reply_message">Reply to message</string>
    <string name="msg_1">Information 1</string>
    <string name="msg_2">Information 2</string>
    <string name="msg_3">Information 3</string>
    <string name="msg_4">Information 4</string>
</resources>