<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/adapter_recyclerview_padding_start"
    android:paddingEnd="@dimen/adapter_recyclerview_padding_start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/diff_color_dial"
            android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30"
        android:text="@string/Background"
        android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/select_back"
        android:layout_width="@dimen/dimen_44"
        android:layout_height="@dimen/dimen_44"
        android:layout_marginTop="@dimen/dimen_18"
        android:src="@drawable/feed_add_icon" />

    <RadioGroup
        android:id="@+id/color_radio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/red"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:button="@null"
            android:checked="true"
            android:text="@string/red"
            android:textColor="@drawable/txt_red" />

        <RadioButton
            android:id="@+id/green"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_18"
            android:layout_weight="1.0"
            android:button="@null"
            android:text="@string/green"
            android:textColor="@drawable/txt_green" />

        <RadioButton
            android:id="@+id/blue"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_18"
            android:layout_weight="1.0"
            android:button="@null"
            android:text="@string/blue"
            android:textColor="@drawable/txt_blue" />

        <RadioButton
            android:id="@+id/gray"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_18"
            android:layout_weight="1.0"
            android:button="@null"
            android:text="@string/gray"
            android:textColor="@drawable/txt_gray" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/picture"
        android:layout_width="@dimen/dimen_83"
        android:layout_height="@dimen/dimen_83"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/dimen_18"
        android:scaleType="fitCenter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginStart="@dimen/adapter_recyclerview_padding_start"
        android:layout_marginTop="@dimen/title_height"
        android:layout_marginEnd="@dimen/adapter_recyclerview_padding_start"
        android:layout_marginBottom="@dimen/adapter_recyclerview_margin_top"
        android:background="@color/dialog_submit_txt_color"
        android:gravity="center"
        android:text="@string/generate_pictures"
        android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />
</LinearLayout>