<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/adapter_recyclerview_padding_start"
    android:paddingEnd="@dimen/adapter_recyclerview_padding_start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reply_message"
            android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />

    <EditText
        android:id="@+id/msg1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:autofillHints="false"
        android:maxLength="64"
        android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />

    <EditText
        android:id="@+id/msg2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:autofillHints="false"
        android:maxLength="64"
        android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_3"
        android:textColor="@android:color/black"
        android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />

    <EditText
        android:id="@+id/msg3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:autofillHints="false"
        android:maxLength="64"
        android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_4"
        android:textColor="@android:color/black"
        android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />

    <EditText
        android:id="@+id/msg4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:autofillHints="false"
        android:maxLength="64"
        android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/adapter_recyclerview_padding_start"
        android:layout_marginTop="@dimen/title_height"
        android:layout_marginEnd="@dimen/adapter_recyclerview_padding_start"
        android:layout_marginBottom="@dimen/adapter_recyclerview_margin_top"
        android:background="@color/dialog_submit_txt_color"
        android:gravity="center"
        android:text="@string/ok"
        android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />

</LinearLayout>