<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/adapter_recyclerview_padding_start"
    android:paddingEnd="@dimen/adapter_recyclerview_padding_start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_menu"
            android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:id="@+id/interval"
            android:layout_width="match_parent"
            android:layout_height="@dimen/adapter_recyclerview_margin_bottom"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/action_hint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_below="@+id/interval"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/adapter_recyclerview_margin_top"
            android:text="@string/FirstLeverTips"
            android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/action_hint"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/adapter_recyclerview_margin_top"
            android:paddingTop="@dimen/adapter_recyclerview_margin_bottom"
            android:paddingBottom="@dimen/adapter_recyclerview_margin_bottom"
            android:text="@string/display"
            android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />

        <TextView
            android:id="@+id/menu_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_below="@+id/display"
            android:background="@color/frame_color"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/circle_box_width"
            android:text="@string/HomePage"
            android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />

        <TextView
            android:id="@+id/menu_sport"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_height"
            android:layout_below="@+id/menu_home"
            android:layout_marginTop="@dimen/split_line_height"
            android:background="@color/frame_color"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/circle_box_width"
            android:text="@string/WorkoutState"
            android:textSize="@dimen/adapter_recyclerview_device_address_txt_size" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/show_menu_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/submit"
            android:layout_below="@+id/menu_sport"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/adapter_recyclerview_padding_start"
            android:layout_marginTop="@dimen/title_height"
            android:layout_marginEnd="@dimen/adapter_recyclerview_padding_start"
            android:layout_marginBottom="@dimen/adapter_recyclerview_margin_top"
            android:background="@color/dialog_submit_txt_color"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="@dimen/adapter_recyclerview_device_name_txt_size" />
    </RelativeLayout>

</LinearLayout>